fixed the issue with a random overflow

--- a/style.css
+++ b/style.css
@@ -16,10 +16,13 @@ body {
     background-image: url(images/axlBack.JPG);
     background-size: cover;
     background-position: center;
+    overflow-x: hidden;
 }
 
 .container {
     padding: 10px 10%;
+    max-width: 100%; 
+    overflow-x: hidden; 
 }
 
 nav {
